[package]
edition = "2021"
name = "rodeo"
version = "1.0.0"
description = "Configurable HTTP reverse proxy server with CORS bypass"
authors = ["Adeoye Adefemi <adefemiadeoye@yahoo.com>"]

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.6.20", features = ["headers", "tracing", "macros"] }
clap = { version = "4.5.4", features = ["cargo"] }
console = "0.15.8"
dotenv = "0.15.0"
futures = "0.3.28"
hyper = {version = "0.14.27", features = ["client"]}
log = "0.4.21"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"]}
toml = "0.8.4"
tower-http = {version = "0.4.0", features = ["trace", "cors"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
